--- a/src/template.html
+++ b/src/template.html
@@ -15,5 +15,6 @@
         Your browser has no support for canvas elements.
     </p>
 </canvas>
+<a class="github" href="https://github.com/fforw/lines">github</a>
 </body>
 </html>
